# methanol

./: .gitattributes  .gitignore  404.html  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  USER_GUIDE.md  UserGuide.md  build.gradle  build.gradle.kts  codecov.yml  generate-docs.sh  gradle.properties  gradlew  index.html  install-redis-ubuntu.sh  mkdocs.yml  settings.gradle  settings.gradle.kts  sitemap.xml
CHANGELOG/: index.html
CONTRIBUTING/: index.html
adapters/: index.html
benchmarks/: index.html
brotli/: index.html
buildSrc/: build.gradle  build.gradle.kts
caching/: index.html
css/: style.css
decompression/: index.html
docs/: adapters.md  caching.md  decompression.md  enhanced_httpclient.md  index.md  interceptors.md  interruptible_reading.md  legacy_adapters.md  media_types.md  methanol_httpclient.md  multipart_and_forms.md  object_mapping.md  progress_tracking.md  retrying_requests.md  streaming_requests.md  writablebodypublisher.md
enhanced_httpclient/: index.html
gradle/: libs.versions.toml
interceptors/: index.html
interruptible_reading/: index.html
kotlin/: index.html
legacy_adapters/: index.html
media_types/: index.html
methanol-benchmarks/: README.md  build.gradle  build.gradle.kts
methanol-blackbox/: README.md  build.gradle  build.gradle.kts
methanol-blackbox-tests/: build.gradle
methanol-brotli/: README.md  build.gradle  build.gradle.kts
methanol-brotli/native/: CMakeLists.txt
methanol-brotli/native/src/jni/: common_jni.cc  common_jni.h  decoder_jni.cc  decoder_jni.h  decoder_jni_onload.cc
methanol-converters/: build.gradle
methanol-gson/: README.md  build.gradle  build.gradle.kts
methanol-jackson/: README.md  build.gradle  build.gradle.kts
methanol-jackson-flux/: README.md  build.gradle  build.gradle.kts
methanol-jackson3/: README.md  (+1 more)
(+1713 files in other folders)
